--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,17 @@ body{
     font-weight: 500;
     margin-right: 3.5rem;
 }
-
 .header.sticky .navbar a{
     color: var(--text-color);
 }
+
+#darkMode-icon{
+    right: 7rem;
+    font-size: 2.4rem;
+    color: var(--white-color);
+    cursor: pointer;
+}
+
 .header.sticky .navbar a.active{
     color: var(--main-color);
 }
@@ -123,22 +130,15 @@ body{
     background: var(--main-color);
     opacity: .7;
 }
+.header.sticky #darkMode-icon{
+    color: var(--text-color);
+    opacity: .9;
+}
 
 #menu-icon{
     font-size: 3.6rem;
     color: var(--text-color);
     display: none;
-}
-
-#dardMode-icon{
-    font-size: 2.4rem;
-    color: var(--white-color);
-    cursor: pointer;
-} 
-
-.header.sticky #dardMode-icon{
-    color: var(--text-color);
-    opacity: .9;
 }
 
 section
@@ -568,16 +568,16 @@ span{
 }
 @media (max-width: 1500px)
 {
-    #darkMode-icon{
+    /* #darkMode-icon{
         right: 7rem;
         font-size: 2.4rem;
         color: var(--white-color);
         margin-bottom: .1rem;
-    }
+    } */
 
-    .home .home-img{
+    /* .home .home-img{
         top: 50rem;
-    }
+    } */
 }
 
 @media(max-width: 1200px)
@@ -585,12 +585,12 @@ span{
     html{
         font-size: 55%;
     }
-    #darkMode-icon{
+    /* #darkMode-icon{
         right: 7rem;
         font-size: 2.4rem;
-        color: var(--text-color);
+        color: var(--white-color);
         margin-bottom: .1rem;
-    }
+    } */
 
     .home .profession-container{
         height: 85.8rem;
@@ -614,7 +614,7 @@ span{
     }
 
     section{
-        padding: 10rem 3% 2rem;
+        padding: 10rem 3 3rem;
     }
 
     .home .profession-container .profession-box{
@@ -640,11 +640,11 @@ span{
     }
 
     .home .profession-container .profession-box{
-        right: -45rem;
+        right: -40rem;
     }
 
     .home .profession-container .overlay{
-        right: -39.5rem;
+        right: -39rem;
     }
     .home-img{
         display: none;
@@ -652,6 +652,7 @@ span{
 
     .certificates,
     .projects{
+        min-height: auto;
         padding-bottom: 7rem; 
     }
 
@@ -683,11 +684,11 @@ span{
         top: 100%;
         left: 0;
         width: 100%;
-        padding: 1rem 3%;
+        padding: 1rem 5%;
         background: var(--bg-color);
         border-top: .1rem solid rgba(0, 0, 0, .2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-        display: none;
+        display: none; 
     }
     .navbar.active{
         display: block;
@@ -713,7 +714,7 @@ span{
     }
 
     .home{
-        padding: 0 3% 23%;
+        padding: 0 12% 25%;
         justify-content: center;
         text-align: center;
     }
@@ -728,12 +729,13 @@ span{
 
     .home-content .social-media a{
          margin:  2.5rem .75re 3rem;
+         justify-content: center;
     }
 
     .home .profession-container{
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 125%;
     }
 
     .home .profession-container .profession-box{
@@ -747,6 +749,7 @@ span{
     .home .profession-box .profession{
         padding:  0 13px;
         left: auto;
+        right: auto;
         transform-origin: 0;
     }
 
@@ -828,7 +831,9 @@ span{
     html{
         font-size: 50%;
     }
-
+    .header{
+        /* width: 86%; */
+    }
     #darkMode-icon{
         right: 7rem;
         font-size: 2.4rem;
@@ -837,7 +842,7 @@ span{
     }
 
     .home{
-        padding:  0 3% 30rem;
+        padding:   0 3% 30rem ;
     }
 
     .home .profession-box .profession:nth-child(1)
